
add_executable(chekline chekline.c)
add_executable(crcccitt crcccitt.c)
add_executable(decode decode.c)
add_executable(encode encode.c)
add_executable(hamming hamming.c)
add_executable(lj300 lj300.c)
add_executable(parity parity.c)
add_executable(pidloop pidloop.c)
add_executable(script script.c)
add_executable(TEXT2BIN TEXT2BIN.c)


# TODO: Consider copying
#   - accel1.pid
#   - calcgram
#   - copygram
#   - genhelp
#   - grammar
#   - help
