set(TARGET_PREFIX ch24-)


add_executable(${TARGET_PREFIX}ch24BigE ch24BigE.c)
add_executable(${TARGET_PREFIX}ch24cnst ch24cnst.c)
add_executable(${TARGET_PREFIX}ch24Drft ch24Drft.c)
add_executable(${TARGET_PREFIX}ch24e ch24e.c)
add_executable(${TARGET_PREFIX}ch24inti ch24inti.c)
add_executable(${TARGET_PREFIX}ch24LnBE ch24LnBE.c)
